--- a/reverseproxy/nginx.conf
+++ b/reverseproxy/nginx.conf
@@ -14,9 +14,21 @@ http {
         server apache:80;
     }
 
+    upstream docker-plex {
+        server plex:32400;
+    }
+
+    upstream docker-django {
+        server web:8000;
+    }
+
+    upstream docker-portfolio {
+        server portfolio:8000;
+    }
+
     server {
         listen 80;
-	server_name example1.com;
+	    server_name example1.com;
 
         location / {
             proxy_pass         http://docker-nginx;
@@ -30,10 +42,52 @@ http {
 
     server {
         listen 80;
-	server_name example2.com;
+	    server_name example2.com;
 
         location / {
             proxy_pass         http://docker-apache;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+    }
+
+    server {
+        listen 80;
+	    server_name docker-plex.com;
+
+        location / {
+            proxy_pass         http://docker-plex;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+    }
+
+    server {
+        listen 80;
+	    server_name docker-django.com;
+
+        location / {
+            proxy_pass         http://docker-django;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+    }
+
+    server {
+        listen 80;
+	    server_name portfolio.com;
+
+        location / {
+            proxy_pass         http://docker-portfolio;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
