--- a/reverseproxy/Dockerfile
+++ b/reverseproxy/Dockerfile
@@ -1,3 +1,5 @@
 FROM nginx:alpine
 
-COPY nginx.conf /etc/nginx/nginx.conf
+# COPY nginx.conf /etc/nginx/nginx.conf
+RUN rm /etc/nginx/conf.d/default.conf
+COPY apps/portfolio.conf /etc/nginx/conf.d/
