--- a/reverseproxy/Dockerfile
+++ b/reverseproxy/Dockerfile
@@ -2,4 +2,4 @@ FROM nginx:alpine
 
 # COPY nginx.conf /etc/nginx/nginx.conf
 RUN rm /etc/nginx/conf.d/default.conf
-COPY apps/portfolio.conf /etc/nginx/conf.d/
+COPY apps/*.conf /etc/nginx/conf.d/
