--- a/reverseproxy/apps/portfolio.conf
+++ b/reverseproxy/apps/portfolio.conf
@@ -2,15 +2,17 @@ upstream docker-portfolio {
     server portfolio:8000;
 }
 
+
 server {
-    listen 443 ssl;
-    server_name portfolio.com;
-    
-    include common.conf;
-    include ssl.conf;
+    listen 80;
+    server_name spencermehta.com;
 
     location / {
-        proxy_pass http://docker-portfolio;
-        include common_location.conf;
+        proxy_pass         http://docker-portfolio;
+        proxy_redirect     off;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Host $server_name;
     }
 }
