--- a/reverseproxy/Dockerfile
+++ b/reverseproxy/Dockerfile
@@ -3,3 +3,5 @@ FROM nginx:alpine
 # COPY nginx.conf /etc/nginx/nginx.conf
 RUN rm /etc/nginx/conf.d/default.conf
 COPY apps/*.conf /etc/nginx/conf.d/
+
+RUN apk update && apk add certbot certbot-nginx
