--- a/reverseproxy/Dockerfile
+++ b/reverseproxy/Dockerfile
@@ -1,7 +1,8 @@
 FROM nginx:alpine
 
-# COPY nginx.conf /etc/nginx/nginx.conf
+COPY nginx.conf /etc/nginx/nginx.conf
 RUN rm /etc/nginx/conf.d/default.conf
-COPY apps/*.conf /etc/nginx/conf.d/
+# RUN mkdir /etc/nginx/conf.d/sites-enabled
+# COPY apps/*.conf /etc/nginx/conf.d/
 
 RUN apk update && apk add certbot certbot-nginx
